# ioe-rss-generator

./: .gitignore  main.py  pyproject.toml
.github/workflows/: main.yml
